--- a/MasterPage.master
+++ b/MasterPage.master
@@ -46,9 +46,9 @@
                                 <li class="menu-item"><a href="gallery.html">Gallery</a></li>
                                 <li class="menu-item"><a href="download.html">Download</a></li>
                                 <li class="menu-item"><a href="blog.html">Blog</a></li>
-                                <li class="menu-item"><a href="band/contact.html">Contact</a></li>
+                                <li class="menu-item"><a href="contact.aspx">Contact</a></li>
                                 
-                                <li class="menu-item"><a href="SignUp.aspx">SignUp</a></li>
+                                <li class="menu-item"><a href="registration.aspx">Registration</a></li>
                                 <li class="menu-item"><a href="LogIn.aspx">Log In</a></li>
 
                                 <li class="menu-item"><a href="Playlist.aspx">PlayList</a></li>
