--- a/band/style.css
+++ b/band/style.css
@@ -2724,3 +2724,26 @@ textbox
             border-bottom-left-radius: 20px;
             border-bottom-right-radius: 20px;
         }
+
+ .style4
+        {
+            width: 212px;
+        }
+        .style7
+        {
+            width: 212px;
+            height: 31px;
+        }
+        .style9
+        {
+            height: 26px;
+        }
+        .style11
+        {
+            width: 259px;
+        }
+        .style12
+        {
+            width: 259px;
+            height: 31px;
+        }
